IndexedDB: Error codes, phase two https://bugs.webkit.org/show_bug.cgi?id=88690

Patch by Alec Flett <alecflett@chromium.org> on 2012-06-12
Reviewed by Tony Chang.

Source/WebCore:

Update the next phase of IndexedDB error codes to match the spec.
This update is mostly focused on DATA_ERR vs CONSTRAINT_ERR.

Also moves some of the error checking for the transaction mode
into the frontend and replaces the backend checks with asserts, so that
we can consolidate error checking in one place.

This also removes a few FIXME's that are no longer true (about
I/O errors - the spec was updated and our implementation was
already correct)

No new tests, existing tests cover changed behavior.

* Modules/indexeddb/IDBCursor.cpp:
(WebCore::IDBCursor::deleteFunction):
* Modules/indexeddb/IDBCursorBackendImpl.cpp:
(WebCore::IDBCursorBackendImpl::deleteFunction):
* Modules/indexeddb/IDBDatabaseBackendImpl.cpp:
(WebCore::IDBDatabaseBackendImpl::setVersionInternal):
* Modules/indexeddb/IDBObjectStore.cpp:
(WebCore::IDBObjectStore::add):
(WebCore::IDBObjectStore::put):
(WebCore::IDBObjectStore::deleteFunction):
(WebCore::IDBObjectStore::clear):
* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::put):
(WebCore::IDBObjectStoreBackendImpl::putInternal):
(WebCore::IDBObjectStoreBackendImpl::deleteFunction):
(WebCore::IDBObjectStoreBackendImpl::clear):
* Modules/indexeddb/IDBTransaction.h:
(WebCore::IDBTransaction::enumMode):
* Modules/indexeddb/IDBTransactionBackendImpl.h:

LayoutTests:

* storage/indexeddb/cursor-advance-expected.txt:
* storage/indexeddb/index-unique-expected.txt:
* storage/indexeddb/mozilla/index-prev-no-duplicate-expected.txt:
* storage/indexeddb/mozilla/index-prev-no-duplicate.html:
* storage/indexeddb/objectstore-basics-expected.txt:
* storage/indexeddb/objectstore-basics-workers-expected.txt:
* storage/indexeddb/resources/cursor-advance.js:
(openSuccess):
(createObjectStore.trans.oncomplete):
(createObjectStore):
(populateObjectStore):
* storage/indexeddb/resources/index-unique.js:
(addMoreDataFailed):
* storage/indexeddb/resources/objectstore-basics.js:
(addAgainFailure):

Canonical link: https://commits.webkit.org/106740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120114 268f45cc-cd09-0410-ab3c-d52691b4dbfc