Source/WebCore/Modules/indexeddb/IDBCursorBackendImpl.cpp
@@ -163,6 +163,8 @@ void IDBCursorBackendImpl::continueFunctionInternal(ScriptExecutionContext*, Pas
 void IDBCursorBackendImpl::deleteFunction(PassRefPtr<IDBCallbacks> prpCallbacks, ExceptionCode& ec)
 {
     IDB_TRACE("IDBCursorBackendImpl::delete");
+    ASSERT(m_transaction->mode() != IDBTransaction::READ_ONLY);
+
     if (!m_cursor || m_cursorType == IndexKeyCursor) {
         ec = IDBDatabaseException::IDB_INVALID_STATE_ERR;
         return;
